--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,8 @@
 @charset "utf-8";
 $grey-dark: #111;
+
+
+@import "../node_modules/bulmaswatch/flatly/variables";
 @import "bulma/bulma";
+@import "../node_modules/bulmaswatch/flatly/overrides";
 @import '@creativebulma/bulma-tooltip';
