--- a/src/app.scss
+++ b/src/app.scss
@@ -6,3 +6,4 @@ $grey-dark: #111;
 @import "bulma/bulma";
 @import "../node_modules/bulmaswatch/flatly/overrides";
 @import '@creativebulma/bulma-tooltip';
+@import '@creativebulma/bulma-tagsinput/src/sass/index';
