Moving/Grouping updates

--- a/src/app.scss
+++ b/src/app.scss
@@ -4,6 +4,7 @@ $grey-dark: #111;
 
 @import "../node_modules/bulmaswatch/flatly/variables";
 @import "bulma/bulma";
+@import '../node_modules/bulma-slider';
 @import "../node_modules/bulmaswatch/flatly/overrides";
 @import '@creativebulma/bulma-tooltip';
 @import '@creativebulma/bulma-tagsinput/src/sass/index';
